--- a/sitee/styles.css
+++ b/sitee/styles.css
@@ -60,7 +60,8 @@ body {
 }
 
 .box1{
-    flex: 0.3; /* Равное распределение пространства */
+    width: 30%;
+    /*flex: 0.3;  Равное распределение пространства */
     padding: 20px;
     background: #f0f0f0;
     border-radius: 25px;
@@ -68,7 +69,8 @@ body {
 }
 
 .box2{
-    flex: 0.7; /* Равное распределение пространства */
+    width: 60%;  
+    /*flex: 0.7; /* Равное распределение пространства */
     padding: 20px;
     background: #f0f0f0;
     border-radius: 25px;
